add authors page and views and update and delete authors

--- a/catalog/templates/catalog/author_list.html
+++ b/catalog/templates/catalog/author_list.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     {% for author in author_list %}
+        <h3>Author ID:<a href="{% url 'catalog:authors-detail' author.id %}"> {( author.id )}</a></h3>
         <h3>Author First Name: {( author.last_name )}</h3>
         <p>Author Last Name: {( author.first_name )}</p>
         <p>Author Date of Birth: {( author.date_of_birth )}</p>
