--- a/catalog/templates/catalog/bookinstance_list_borrowed_user.html
+++ b/catalog/templates/catalog/bookinstance_list_borrowed_user.html
@@ -15,5 +15,12 @@
 
     {% else %}
       <p>There are no books borrowed.</p>
-    {% endif %}       
+    {% endif %}
+
+    {% if perms.catalog.can_mark_returned %}
+        <a href="{% url 'catalog:book-renew-librarian' bookinst.id %}">
+            Renew
+        </a>
+    {% endif %}
+
 {% endblock %}
